--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   # state management
   flutter_bloc: ^8.1.2
 
+  # animation
+  lottie: ^2.3.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/lottie/theme_lottie.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
